namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-ppud-automation-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-ppud-automation-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "making-recall-decisions"
    cloud-platform.justice.gov.uk/application: "PPUD Automation API"
    cloud-platform.justice.gov.uk/owner: "Making a recall decision: making-recall-decisions-tech@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-ppud-automation-api.git"
    cloud-platform.justice.gov.uk/team-name: "making-recall-decision"
    cloud-platform.justice.gov.uk/review-after: ""
